# libien-mirror

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile
cmake/: CPM.cmake  config.cmake.in
include/ien/: arithmetic.hpp  bit_tools.hpp  platform.hpp  strutils.hpp
lib/: CMakeLists.txt
lib/include/ien/: activity.hpp  algorithm.hpp  alloc.hpp  arithmetic.hpp  assert.hpp  base64.hpp  bit_iterator.hpp  bit_tools.hpp  circular_array.hpp  container_utils.hpp  fs_utils.hpp  initializers.hpp  io_utils.hpp  lang_utils.hpp  math_utils.hpp  memory.hpp  messagebox.hpp  net_utils.hpp  platform.hpp  serialization.hpp  str_utils.hpp  svo_vector.hpp  threading.hpp
lib/include/ien/bits/: str_split.hpp  str_utils_defs.hpp
lib/include/ien/bits/io_utils/: detail.hpp  unique_file_descriptor.hpp
lib/include/ien/bits/platform/: arch.hpp  arm.hpp  c++.hpp  compiler.hpp  os.hpp  warnings.hpp
lib/include/ien/bits/serialization/: deserializer.hpp  deserializer_iterator.hpp  serializer.hpp  serializer_inserter.hpp  value_deserializers.hpp  value_serializers.hpp
lib/include/ien/bits/str_utils/: common.hpp  contains.hpp  conversions.hpp  index_of.hpp  indices_of.hpp  replace.hpp  split.hpp  tolowerupper.hpp  trim.hpp
lib/include/ien/fonts/: ttf_font.hpp
lib/include/ien/image/: image.hpp  image_data.hpp  image_format.hpp  image_ycbcr.hpp  image_ycrcb.hpp  resize_filter.hpp
lib/include/ien/sftp/: client.hpp  sftp.hpp  sftp_error.hpp  types.hpp
lib/include/ien/win32/: windows.h  winsock2.h  ws2tcpip.h
lib/src/: activity.cpp  assert.cpp  base64.cpp  fs_utils.cpp  io_utils.cpp  messagebox.cpp  net_utils.cpp  platform.cpp  serialization.cpp  str_utils.cpp  threading.cpp
lib/src/bits/: deserializer.inl.cpp  serializer.inl.cpp
lib/src/bits/io_utils/: unique_file_descriptor.cpp
lib/src/fonts/: ttf_font.cpp
lib/src/image/: image.cpp  image_data.cpp  image_ycbcr.cpp  image_ycrcb.cpp
lib/src/sftp/: client.cpp  sftp.cpp
lib/src/win32/: windows.cpp
playground/: CMakeLists.txt  playground.cpp
src/: base64.cpp  strutils.cpp
test/: CMakeLists.txt  algorithm.cpp  alloc.cpp  arithmetic.cpp  bit_tools.cpp  fs_utils.cpp  image.cpp  initializers.cpp  lang_utils.cpp  net_utils.cpp  serialization.cpp  str_utils.cpp  svo_vector.cpp
test/benchmark/: image.cpp  str_utils.cpp
